add the swagger documentation of show method
