# storage/api-docs/api-docs.json
@@ -634,6 +634,142 @@
                     }
                 ]
             }
+        },
+        "/api/articles/{article}": {
+            "get": {
+                "tags": [
+                    "Articles"
+                ],
+                "summary": "Show a specific article",
+                "description": "Returns the details of a specific article.",
+                "operationId": "4a09e05e36f650b9c54ba9a601b735f9",
+                "parameters": [
+                    {
+                        "name": "article",
+                        "in": "path",
+                        "description": "ID of article to return",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "Article": {
+                                            "description": "Details of the article.",
+                                            "properties": {
+                                                "id": {
+                                                    "description": "ID of the article.",
+                                                    "type": "integer"
+                                                },
+                                                "title": {
+                                                    "description": "Title of the article.",
+                                                    "type": "string"
+                                                },
+                                                "body": {
+                                                    "description": "Body of the article.",
+                                                    "type": "string"
+                                                },
+                                                "category": {
+                                                    "description": "Details of the article's category.",
+                                                    "properties": {
+                                                        "id": {
+                                                            "description": "ID of the category.",
+                                                            "type": "integer"
+                                                        },
+                                                        "name": {
+                                                            "description": "Name of the category.",
+                                                            "type": "string"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                },
+                                                "tags": {
+                                                    "description": "Array of tags associated with the article.",
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "description": "ID of the tag.",
+                                                                "type": "integer"
+                                                            },
+                                                            "name": {
+                                                                "description": "Name of the tag.",
+                                                                "type": "string"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                },
+                                                "user": {
+                                                    "description": "Details of the user who created the article.",
+                                                    "properties": {
+                                                        "id": {
+                                                            "description": "ID of the user.",
+                                                            "type": "integer"
+                                                        },
+                                                        "name": {
+                                                            "description": "Name of the user.",
+                                                            "type": "string"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                },
+                                                "comments": {
+                                                    "description": "Array of comments associated with the article.",
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "description": "ID of the comment.",
+                                                                "type": "integer"
+                                                            },
+                                                            "body": {
+                                                                "description": "Body of the comment.",
+                                                                "type": "string"
+                                                            },
+                                                            "user": {
+                                                                "description": "Details of the user who created the comment.",
+                                                                "properties": {
+                                                                    "id": {
+                                                                        "description": "ID of the user.",
+                                                                        "type": "integer"
+                                                                    },
+                                                                    "name": {
+                                                                        "description": "Name of the user.",
+                                                                        "type": "string"
+                                                                    }
+                                                                },
+                                                                "type": "object"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "user not found"
+                    },
+                    "401": {
+                        "description": "Anuthorize action"
+                    }
+                }
+            }
         }
     }
 }
